# e2n

./: README.md  codex.md  pyproject.toml  start.sh
.github/: FUNDING.yml  copilot-instructions.md
docs/: INSTALL.md  Notion_supported_features.md  evernote_meta_types.md  notion-attribute-gaps.md  users.md
src/e2n/: __init__.py  cli.py  enex.py  enml.py  exception_rebuild.py  exceptions.py  link_resolver.py  notion.py  operation_queue.py  state.py
src/e2n/webui/: __init__.py  app.py  server.py
src/e2n/webui/static/: style.css
src/e2n/webui/templates/: index.html  links.html  links_result.html  passwords.html  passwords_decrypt.html  passwords_result.html  resolve_auto_relink_result.html  resolve_by_page.html  resolve_by_type.html  resolve_dashboard.html  resolve_decrypt.html  resolve_decrypt_result.html  resolve_passwords.html  wizard_status.html  wizard_step1.html  wizard_step2.html  wizard_step3.html  wizard_step4.html  wizard_step5.html
tests/: test_cli.py  test_enex_extraction.py  test_enml.py  test_exception_rebuild.py  test_exceptions.py  test_link_resolver.py  test_notion.py  test_state.py  test_webui.py
