[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enex2notion2026"
version = "0.1.0"
description = "Evernote ENEX to Notion migration tooling"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "notion-client>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
e2n = "e2n.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
