[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enex2notion2026"
version = "0.1.0"
description = "Evernote ENEX to Notion migration tooling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "jinja2>=3.1.0",
    "lxml>=5.0",
    "notion-client>=3.0.0,<4.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
e2n = "e2n.cli:main"
e2n-ui = "e2n.webui.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"e2n.webui" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
